- pep8 clean - new setup.py and __init__.py with shared configuration - python3 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,19 @@
 [tox]
-envlist = py27
+envlist = pep8,py27,py35
 
 [testenv]
-commands = py.test test
+passenv = HOME
+commands =
+    py.test _test
 deps =
     pytest
+    flake8
+
+[testenv:pep8]
+commands =
+   flake8 {posargs}
+
+[flake8]
+show-source = True
+max-line-length = 95
+exclude = .hg,.git,.tox,dist,.cache,__pycache__,ruamel.zip2tar.egg-info
