fix #4 crash if one of the .bws is empty (reported by Alex)

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = pep8,py27,py35,py34
+#envlist = pep8,py36,y35,py27,py34,py26,pypy
+envlist = pep8,py35,py27
 
 [testenv]
 passenv = HOME
@@ -7,7 +8,7 @@ commands =
     py.test _test
 deps =
     pytest
-    flake8
+    flake8==2.5.5
 
 [testenv:pep8]
 commands =
