fix issue #8 chromium-browser executable name change

--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,37 @@
 [tox]
-#envlist = pep8,py36,y35,py27,py34,py26,pypy
-envlist = pep8,py35,py27
+toxworkdir = /data1/DATA/tox/ruamel.bws 
+envlist = cs,py37,py36,py35,py27
 
 [testenv]
 passenv = HOME
 commands =
-    py.test _test
+    /bin/bash -c 'pytest _test/test_*.py'
 deps =
     pytest
-    flake8==2.5.5
+
+[testenv:cs]
+basepython = python3.6
+deps =
+    flake8
+    flake8-bugbear;python_version>="3.5"
+commands =
+    flake8 []{posargs}
 
 [testenv:pep8]
+basepython = python3.6
+deps =
+    flake8
+    flake8-bugbear;python_version>="3.5"
 commands =
-   flake8 {posargs}
+    flake8 []{posargs}
 
 [flake8]
 show-source = True
 max-line-length = 95
-exclude = .hg,.git,.tox,dist,.cache,__pycache__,ruamel.zip2tar.egg-info
+ignore = W503,F405,E203
+exclude = _test/lib,.hg,.git,.tox,dist,.cache,__pycache__,ruamel.zip2tar.egg-info
+
+[pytest]
+filterwarnings =
+    error::DeprecationWarning
+    error::PendingDeprecationWarning
