refactor; laregely simply code

--- a/tox.ini
+++ b/tox.ini
@@ -1,37 +1,32 @@
 [tox]
-toxworkdir = /data1/DATA/tox/ruamel.bws 
-envlist = cs,py37,py36,py35,py27
+envlist = py35, py37
+skip_missing_interpreters = true
+
 
 [testenv]
-passenv = HOME
-commands =
-    /bin/bash -c 'pytest _test/test_*.py'
 deps =
+    pylint
+    flake8
+    flake8-mypy
+    flake8-bugbear
     pytest
+    pytest-cov
 
-[testenv:cs]
-basepython = python3.6
-deps =
-    flake8
-    flake8-bugbear;python_version>="3.5"
-commands =
-    flake8 []{posargs}
 
-[testenv:pep8]
-basepython = python3.6
-deps =
-    flake8
-    flake8-bugbear;python_version>="3.5"
+changedir = {toxworkdir}
+
+ignore_outcome = True
 commands =
-    flake8 []{posargs}
+    /bin/bash -c 'pylint -j3 --rcfile={toxinidir}/.pylintrc {toxinidir}/bws2 > {toxinidir}/pylint.log'
+
+    /bin/mkdir -p {envtmpdir}/.slocdata
+    /bin/bash -c 'sloccount --datadir {envtmpdir}/.slocdata --duplicates --wide --details {envsitepackagesdir}/bws2 > {toxinidir}/sloccount.sc'
+
+    flake8 --tee --output-file={toxinidir}/pyflakes.log {envsitepackagesdir}/bws2
+
 
 [flake8]
 show-source = True
 max-line-length = 95
 ignore = W503,F405,E203
 exclude = _test/lib,.hg,.git,.tox,dist,.cache,__pycache__,ruamel.zip2tar.egg-info
-
-[pytest]
-filterwarnings =
-    error::DeprecationWarning
-    error::PendingDeprecationWarning
